# icube-ethercat-ros2

ethercat_driver/: CMakeLists.txt  package.xml
ethercat_driver/include/ethercat_driver/: ethercat_driver.hpp
ethercat_driver/msg/: JointOperationalStateArray.msg
ethercat_driver/src/: ethercat_driver.cpp
ethercat_driver_ros2/sphinx/user_guide/: config_generic_slave.rst
ethercat_generic_plugins/ethercat_generic_cia402_drive/include/ethercat_generic_plugins/: cia402_common_defs.hpp  generic_ec_cia402_drive.hpp
ethercat_generic_plugins/ethercat_generic_cia402_drive/src/: generic_ec_cia402_drive.cpp
ethercat_generic_plugins/ethercat_generic_slave/src/: generic_ec_slave.cpp
ethercat_interface/: CMakeLists.txt
ethercat_interface/include/ethercat_interface/: ec_master.hpp  ec_pdo_channel_manager.hpp  ec_slave.hpp
ethercat_interface/src/: ec_master.cpp
ethercat_manager/: CMakeLists.txt
ethercat_manager/include/ethercat_manager/: ec_master_async.hpp  ec_master_async_io.hpp
ethercat_manager/src/: ethercat_sdo_srv_server.cpp
